Audio-Player, Downloads und Waveform-Visualisierung hinzugefügt

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,11 @@
                     </div>
                     <p class="text-center text-gray-300 mt-2" id="levelText">Bereit</p>
                 </div>
+                
+                <!-- Waveform Visualisierung -->
+                <div class="w-full max-w-4xl mt-4">
+                    <canvas id="waveformCanvas" class="w-full h-32 bg-gray-900 rounded-lg" style="display: none;"></canvas>
+                </div>
 
                 <!-- Aufnahme-Buttons -->
                 <div class="flex space-x-4">
