--- a/frontend/index.html
+++ b/frontend/index.html
@@ -69,6 +69,34 @@
             </div>
         </div>
 
+        <!-- Album-Metadaten-Suche -->
+        <div class="bg-white/10 backdrop-blur-lg rounded-2xl shadow-2xl p-8 mb-8">
+            <h2 class="text-2xl font-semibold text-white mb-6">🔍 Album-Metadaten automatisch finden</h2>
+            <div id="metadataSearchSection" class="hidden">
+                <form id="searchAlbumForm" class="space-y-4 mb-6">
+                    <div class="grid grid-cols-2 gap-4">
+                        <div>
+                            <label class="block text-white mb-2">Interpret:</label>
+                            <input type="text" id="searchArtist" class="w-full p-3 rounded-lg bg-gray-800 text-white" placeholder="z.B. The Beatles" required>
+                        </div>
+                        <div>
+                            <label class="block text-white mb-2">Album:</label>
+                            <input type="text" id="searchAlbum" class="w-full p-3 rounded-lg bg-gray-800 text-white" placeholder="z.B. Abbey Road" required>
+                        </div>
+                    </div>
+                    <div>
+                        <label class="block text-white mb-2">Tracks pro LP-Seite (optional):</label>
+                        <input type="number" id="tracksPerSide" class="w-full p-3 rounded-lg bg-gray-800 text-white" placeholder="z.B. 5" min="1">
+                        <p class="text-gray-400 text-sm mt-1">Hilft bei der Auswahl des richtigen Albums</p>
+                    </div>
+                    <button type="submit" class="bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-8 rounded-lg transition-all transform hover:scale-105 shadow-lg w-full">
+                        🔍 Album suchen
+                    </button>
+                </form>
+                <div id="albumSearchResults" class="hidden space-y-4"></div>
+            </div>
+        </div>
+
         <!-- Einstellungen -->
         <div class="bg-white/10 backdrop-blur-lg rounded-2xl shadow-2xl p-8 mb-8">
             <h2 class="text-2xl font-semibold text-white mb-6">⚙️ Einstellungen</h2>
