--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,7 +72,7 @@
         <!-- Album-Metadaten-Suche -->
         <div class="bg-white/10 backdrop-blur-lg rounded-2xl shadow-2xl p-8 mb-8">
             <h2 class="text-2xl font-semibold text-white mb-6">🔍 Album-Metadaten automatisch finden</h2>
-            <div id="metadataSearchSection" class="hidden">
+            <div id="metadataSearchSection">
                 <form id="searchAlbumForm" class="space-y-4 mb-6">
                     <div class="grid grid-cols-2 gap-4">
                         <div>
