Album-Suche: Ergebnisse-Div ist jetzt immer sichtbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,7 +93,7 @@
                         🔍 Album suchen
                     </button>
                 </form>
-                <div id="albumSearchResults" class="hidden space-y-4"></div>
+                <div id="albumSearchResults" class="space-y-4 mt-4"></div>
             </div>
         </div>
 
