--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinyl Digitalizer - Professionelle Schallplatten-Digitalisierung</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <script src="https://cdn.tailwindcss.com" defer></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@@ -263,6 +263,6 @@
         </div>
     </div>
 
-    <script src="/app.js?v=3" defer></script>
+    <script src="/app.js?v=4"></script>
 </body>
 </html>
