--- a/frontend/index.html
+++ b/frontend/index.html
@@ -255,6 +255,15 @@
                         </div>
                     </div>
                     
+                    <div class="bg-gray-900/30 rounded-xl p-6">
+                        <h3 class="text-xl font-semibold text-white mb-4">🛡️ Löschbestätigung</h3>
+                        <label class="flex items-center gap-3 text-white">
+                            <input type="checkbox" id="confirmDeleteCheckbox" class="h-5 w-5 rounded border border-gray-700 bg-gray-800">
+                            Bei Löschaktionen nachfragen
+                        </label>
+                        <p class="text-gray-400 text-sm mt-2">Bestätigungen kann man abschalten, wenn du schnell viele Aufnahmen reinigen willst.</p>
+                    </div>
+                    
                     <button type="submit" class="bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-4 px-10 rounded-xl transition-all transform hover:scale-105 shadow-lg w-full text-lg">
                         💾 Einstellungen speichern
                     </button>
