--- a/frontend/index.html
+++ b/frontend/index.html
@@ -254,6 +254,18 @@
                             </div>
                         </div>
                     </div>
+                    <div class="bg-gray-900/30 rounded-xl p-6 mt-4">
+                        <h3 class="text-xl font-semibold text-white mb-4">🛑 Automatisch stoppen</h3>
+                        <div class="space-y-3">
+                            <div>
+                                <label class="block text-white mb-2 font-semibold">Nach Stille (s):</label>
+                                <input type="number" id="autoStopSilence" name="recording_auto_stop_silence_duration" value="10.0"
+                                       step="0.5" min="0"
+                                       class="w-full p-3 rounded-lg bg-gray-800 text-white border border-gray-700">
+                                <p class="text-gray-400 text-sm mt-1">Stoppt die Aufnahme automatisch, wenn diese Zeit keine Level über der Schwelle erreicht. 0 deaktiviert.</p>
+                            </div>
+                        </div>
+                    </div>
                     
                     <div class="bg-gray-900/30 rounded-xl p-6">
                         <h3 class="text-xl font-semibold text-white mb-4">🛡️ Löschbestätigung</h3>
