--- a/frontend/index.html
+++ b/frontend/index.html
@@ -66,6 +66,7 @@
                         <div id="levelBar" class="h-6 bg-gradient-to-r from-green-500 via-yellow-500 to-red-500 rounded-lg transition-all duration-100" style="width: 0%"></div>
                     </div>
                     <canvas id="waveformCanvas" class="w-full h-32 bg-gray-900/50 rounded-xl" style="display: none;"></canvas>
+                    <p class="text-gray-400 text-sm mt-2 text-center">Die Waveform wird während der Aufnahme automatisch angezeigt</p>
                 </div>
 
                 <!-- Aufnahme-Buttons -->
@@ -76,7 +77,7 @@
                         </svg>
                         Aufnahme starten
                     </button>
-                    <button id="stopBtn" class="bg-red-600 hover:bg-red-700 text-white font-bold py-4 px-10 rounded-xl transition-all transform hover:scale-105 shadow-lg text-lg flex items-center gap-2" disabled>
+                    <button id="stopBtn" class="bg-red-600 hover:bg-red-700 text-white font-bold py-4 px-10 rounded-xl transition-all transform hover:scale-105 shadow-lg text-lg flex items-center gap-2 disabled:opacity-50 disabled:cursor-not-allowed" disabled>
                         <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M6 6h12v12H6z"/>
                         </svg>
