--- a/frontend/index.html
+++ b/frontend/index.html
@@ -260,10 +260,10 @@
                         <div class="space-y-3">
                             <div>
                                 <label class="block text-white mb-2 font-semibold">Nach Stille (s):</label>
-                                <input type="number" id="autoStopSilence" name="recording_auto_stop_silence_duration" value="10.0"
+                                <input type="number" id="autoStopSilence" name="recording_auto_stop_silence_duration" value="0.0"
                                        step="0.5" min="0"
                                        class="w-full p-3 rounded-lg bg-gray-800 text-white border border-gray-700">
-                                <p class="text-gray-400 text-sm mt-1">Stoppt die Aufnahme automatisch, wenn diese Zeit keine Level über der Schwelle erreicht. 0 deaktiviert.</p>
+                                <p class="text-gray-400 text-sm mt-1">Stoppt die Aufnahme automatisch, wenn diese Zeit keine Level über -50 dB erreicht. <strong>0 = deaktiviert (Standard)</strong>. Empfohlen: 30-60 Sekunden für Platten.</p>
                             </div>
                         </div>
                     </div>
